# FagotronBot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  commands.cc  corpus.cc  corpus.hpp  corpus.yml  db.cc  fagotron.cc  fagotron.hpp  fagotron.service  linux_build.sh  play.cc  send.cc
.github/workflows/: linux_build.yml  windows_build.yml
